# uv-python-buildpack

./: .gitignore  .releaserc.json  CLAUDE.md  Makefile  README.md  manifest.yml
.github/: FUNDING.yml
.github/workflows/: pipeline.yaml
example/my-app/: Procfile  manifest.yml  pyproject.toml
example/my-app-manifest/: manifest.yml  pyproject.toml
example/my-app-manifest/src/my_app_manifest/: main.py
example/my-app-procfile/: manifest.yml
example/my-app-script/src/my_app_script/: main.py
example/my-app/src/my_app/: main.py
examples/my-app-manifest/: manifest.yml  pyproject.toml
examples/my-app-manifest/src/my_app_manifest/: main.py
examples/my-app-mta/: mta.yaml  pyproject.toml
examples/my-app-mta/src/my_app_mta/: main.py
examples/my-app-procfile/: Procfile  pyproject.toml
examples/my-app-procfile/src/my_app_procfile/: main.py
examples/my-app-script/: manifest.yml  pyproject.toml
scripts/: smoke-test.sh  unit-test.sh
test/my-app/: pyproject.toml
test/my-app-1/: pyproject.toml
test/my-app-4/: pyproject.toml
test/smoke/my-app-1/: main.py
test/smoke/my-app-2/: pyproject.toml
test/smoke/my-app-2/src/server/: main.py
test/smoke/my-app-3/: pyproject.toml
test/smoke/my-app-3/src/my_app_3/: __init__.py
test/unit/: compile_test.sh  detect_test.sh  release_test.sh
